rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2008_IDMProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2008_IDMProtocolSpecification.asn1
---
Warnings:
LinkerError in ASN grammar: Mismatching argument for parameter Protocols of IdmBind


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod idmprotocol_specification {
    extern crate alloc;
    use super::certificate_extensions::GeneralName;
    use super::common_protocol_specification::*;
    use super::directory_abstract_service::{SecurityProblem, ServiceProblem, Versions};
    use super::useful_definitions::{
        CERTIFICATE_EXTENSIONS, COMMON_PROTOCOL_SPECIFICATION, DIRECTORY_ABSTRACT_SERVICE,
        DIRECTORY_IDMPROTOCOLS, ENHANCED_SECURITY,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum Abort {
        mistypedPDU = 0,
        unboundRequest = 1,
        invalidPDU = 2,
        resourceLimitation = 3,
        connectionFailed = 4,
        invalidProtocol = 5,
        reasonNotSpecified = 6,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum IdmRejectReason {
        mistypedPDU = 0,
        duplicateInvokeIDRequest = 1,
        unsupportedOperationRequest = 2,
        unknownOperationRequest = 3,
        mistypedArgumentRequest = 4,
        resourceLimitationRequest = 5,
        unknownInvokeIDResult = 6,
        mistypedResultRequest = 7,
        unknownInvokeIDError = 8,
        unknownError = 9,
        mistypedParameterError = 10,
        unsupportedIdmVersion = 11,
        unsuitableIdmVersion = 12,
        invalidIdmVersion = 13,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct IdmReject {
        #[rasn(identifier = "invokeID")]
        pub invoke_id: Integer,
        pub reason: IdmRejectReason,
    }
    impl IdmReject {
        pub fn new(invoke_id: Integer, reason: IdmRejectReason) -> Self {
            Self { invoke_id, reason }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct StartTLS(pub ());
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum TLSResponse {
        success = 0,
        operationsError = 1,
        protocolError = 2,
        unavailable = 3,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Unbind(pub ());
}
