rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2008_OSIProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2008_OSIProtocolSpecification.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 43, column 19]
    │
    │ 
 43 │  .&Type ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 44 │      (OsiBind{{protocol}} | OsiBindResult{{protocol}} | OsiBindError{{protocol}}
 45 │       | OsiOperation{{protocol.&Operations}} | PresentationAbort)
    │
────╯
