rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2012_CommonProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2012_CommonProtocolSpecification.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve reference in object set.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod common_protocol_specification {
    extern crate alloc;
    use super::operational_binding_management::{
        ESTABLISH_OPERATIONAL_BINDING, MODIFY_OPERATIONAL_BINDING, TERMINATE_OPERATIONAL_BINDING,
    };
    use super::useful_definitions::OP_BINDING_MANAGEMENT;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    #[non_exhaustive]
    pub enum Code {
        local(Integer),
        global(ObjectIdentifier),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    #[non_exhaustive]
    pub enum InvokeId {
        present(Integer),
        absent(()),
    }
    #[doc = " error code for DOP"]
    pub static ID_ERR_OPERATIONAL_BINDING_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(100i128)));
    pub static ID_ERRCODE_ABANDON_FAILED: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(7i128)));
    pub static ID_ERRCODE_ABANDONED: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(5i128)));
    #[doc = " error codes for DAP and DSP"]
    pub static ID_ERRCODE_ATTRIBUTE_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(1i128)));
    pub static ID_ERRCODE_DSA_REFERRAL: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(9i128)));
    pub static ID_ERRCODE_NAME_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(2i128)));
    pub static ID_ERRCODE_REFERRAL: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(4i128)));
    pub static ID_ERRCODE_SECURITY_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(6i128)));
    pub static ID_ERRCODE_SERVICE_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(3i128)));
    #[doc = " error code for DISP"]
    pub static ID_ERRCODE_SHADOW_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(1i128)));
    pub static ID_ERRCODE_UPDATE_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(8i128)));
    #[doc = "  operation codes for DOP"]
    pub static ID_OP_ESTABLISH_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(100i128)));
    pub static ID_OP_MODIFY_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(102i128)));
    pub static ID_OP_TERMINATE_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(101i128)));
    pub static ID_OPCODE_ABANDON: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(3i128)));
    pub static ID_OPCODE_ADD_ENTRY: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(6i128)));
    pub static ID_OPCODE_ADMINISTER_PASSWORD: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(11i128)));
    pub static ID_OPCODE_CHANGE_PASSWORD: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(10i128)));
    pub static ID_OPCODE_COMPARE: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(2i128)));
    pub static ID_OPCODE_COORDINATE_SHADOW_UPDATE: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(3i128)));
    pub static ID_OPCODE_LDAP_TRANSPORT: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(12i128)));
    pub static ID_OPCODE_LINKED_LDAP: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(13i128)));
    pub static ID_OPCODE_LIST: LazyLock<Code> = LazyLock::new(|| Code::local(Integer::from(4i128)));
    pub static ID_OPCODE_MODIFY_DN: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(9i128)));
    pub static ID_OPCODE_MODIFY_ENTRY: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(8i128)));
    #[doc = "  operation codes for DAP and DSP"]
    pub static ID_OPCODE_READ: LazyLock<Code> = LazyLock::new(|| Code::local(Integer::from(1i128)));
    pub static ID_OPCODE_REMOVE_ENTRY: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(7i128)));
    #[doc = "  operation codes for DISP"]
    pub static ID_OPCODE_REQUEST_SHADOW_UPDATE: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(1i128)));
    pub static ID_OPCODE_SEARCH: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(5i128)));
    pub static ID_OPCODE_UPDATE_SHADOW: LazyLock<Code> =
        LazyLock::new(|| Code::local(Integer::from(2i128)));
}
