rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2012_DirectoryOperationalBindingTypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2012_DirectoryOperationalBindingTypes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod directory_operational_binding_types {
    extern crate alloc;
    use super::useful_definitions::ID_OB;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ID_OP_BINDING_HIERARCHICAL: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_OB, &[2u32]].concat()).unwrap().to_owned());
    pub static ID_OP_BINDING_NON_SPECIFIC_HIERARCHICAL: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_OB, &[3u32]].concat()).unwrap().to_owned());
    pub static ID_OP_BINDING_SHADOW: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_OB, &[1u32]].concat()).unwrap().to_owned());
}
