rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2012_OSIProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2012_OSIProtocolSpecification.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 42, column 19]
    │
    │ 
 42 │  .&Type ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 43 │      (OsiBind{{protocol}} | OsiBindResult{{protocol}} | OsiBindError{{protocol}}
 44 │       | OsiOperation{{protocol.&Operations}} | OsiUnbind | PresentationAbort)
    │
────╯
